@@ -19,6 +19,7 @@ core 2.1.3 - not released yet
 	* Added: update() and updateField()
 	* Added: Default link to documentation
 	* Added: Comparisom form validators (dateBefore, dateAfter, dateNotAfter, dateTimeNotBefore, dateTimeAfter, equals) can optionally compare against a value
+	* Added: New parameter 'area' for asset file config. If merging is disabled (or not set), you can define one or more areas (string or array) where to load the specific file (no config = all areas)
 	* Changed: Don't require system locale data to set a locale for translation
 	* Changed: TodoyuDebug handles now debugging status
 	* Changed: Format of duration (hour)
